1999-03-25  Neil Crellin  <neil@wallaby.cc>

	* docs/TAPE.CHANGERS (chg-chs): URL for chs

1999-03-25  Alexandre Oliva  <oliva@dcc.unicamp.br>, Tom Schutter  <tom@platte.com>, Cloyce D. Spradling  <cloyce@headgear.org>

	* patches/samba-largefs.patch: updated for Samba 2.0.*

1999-03-25  Charles Owens  <owensc@enc.edu>

	* changer-src/chg-chio.pl.in (changeTape): do not print status to
	both stdout and stderr; this causes failures on FreeBSD

1999-03-21  Elmar Bartel  <bartel@Informatik.TU-Muenchen.DE>

	* conffile.h, conffile.c: new columnspec option
	* reporter.c: use it
	* man/amanda.8.in: description and example
	* example/amanda.conf.in: ditto

1999-03-20  Dahn Nilsson <dahn.nilsson@maxlab.lu.se>

	* configure.in: SAMBA_VERSION is not set correctly.

1999-03-17  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* client-src/sendbackup-dump.c (re_table): generalize a bit some of
	the regular expressions, so as to make us more adaptable to future
	minor changes and bugfixes the the output format of some dumps

1999-03-15 Thomas Hepper <th@ant.han.de>
	* changer-src/chg-scsi.c: If the open of the TapeDevice fails
	the programm is not terminated.
	* changer-src/scsi-aix.c: The wrong ident string was checked
	for 0 termination.
	* changer-src/scsi-bsd.c: see scsi-aix.c
	* changer-src/scsi-linux.c: see scsi-aix.c
	* changer-src/scsi-solaris.c: see scsi-aix.c
	* changer-src/scsi-changer-driver.c: Added some more debug prints.
	Wrong fd passwd to LogSense.
	* docs/TAPE.CHANGERS: added note about linux and aha1542

1999-03-15   Michael Povel  <mcp@ladyada.han.de>
	* server-src/amlabel.c: Wrong parameter to changer_label
	* server-src/amtape.c: New function update_one_slot,
	update_labeldb
	* server-src/changer.c: Changed slotsp from int to char, some
	debug prints.
	* server-src/changer.h: Changed prototype for changer_label

1999-03-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* config/ltconfig, config/ltmain.sh: updated from libtool 1.2f